--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: build
 
 on:
   push:
@@ -11,19 +11,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source
+      - name: checkout
         uses: actions/checkout@v3
 
-      - name: Set up Go
+      - name: setup go
         uses: actions/setup-go@v4
         with:
           go-version: '1.21'
 
-      - name: Build
+      - name: build
         run: go build -o dist/trxsh cmd/main.go
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
+      - name: upload artifact
+        uses: actions/upload-artifact@v4
         with:
           name: trxsh
           path: dist/trxsh
